# ANNarchy

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  MANIFEST.in  README.md  README.rst  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
ANNarchy/: __init__.py
ANNarchy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ANNarchy/core/: Attributes.py  CTypes.py  ConnectorMethods.py  Connectors.py  Constant.py  Dendrite.py  Descriptor.py  Global.py  IO.py  Monitor.py  Network.py  NetworkManager.py  Neuron.py  Parallel.py  Parameters.py  Poisson.py  Population.py  PopulationView.py  Profiler.py  Projection.py  Random.py  Record.py  Simulate.py  SpecificPopulation.py  SpecificProjection.py  Synapse.py  Utils.py
ANNarchy/cython_ext/: Connector.pxd  Connector.pyx  Coordinates.pyx  Transformations.pyx  __init__.py
ANNarchy/data/: compile.sh  setup.py
ANNarchy/extensions/: __init__.py
ANNarchy/generator/: CmdLineArgParser.py  CodeGenerator.py  Compiler.py  DendriteGenerator.py  DendriteTemplates.py  Doxyfile  Generator.py  MonitorGenerator.py  PopulationGenerator.py  PopulationTemplates.py  ProfileGenerator.py  ProjectionGenerator.py  ProjectionTemplates.py  ProjectionTemplatesCUDA.py  ProjectionTemplatesOMP.py  PyxGenerator.py  RecordGenerator.py  Sanity.py  Templates.py  Utils.py  __init__.py
ANNarchy/include/: BSRInvMatrix.hpp  BSRInvMatrixBitmask.hpp  BSRMatrix.hpp  BSRMatrixBitmask.hpp  BSRMatrixCUDA.hpp  COOMatrix.hpp  COOMatrixCUDA.hpp  CSRCMatrix.hpp  CSRCMatrixCUDA.hpp  CSRCMatrixCUDAT.hpp  CSRCMatrixT.hpp  CSRCMatrixTOMP.hpp  CSRMatrix.hpp  CSRMatrixCUDA.hpp  DenseMatrix.hpp  DenseMatrixBitmask.hpp  DenseMatrixCUDA.hpp  DenseMatrixOffsets.hpp  DiaMatrix.hpp  ELLMatrix.hpp  ELLMatrixCUDA.hpp  ELLRMatrix.hpp  ELLRMatrixCUDA.hpp  FixedPoint.hpp  HYBMatrix.hpp  HYBMatrixCUDA.hpp  LILInvMatrix.hpp  LILInvMatrixCUDA.hpp  LILMatrix.hpp  LILMatrixCUDA.hpp  ParallelLIL.hpp  PartitionedMatrix.hpp  SELLMatrix.hpp  SELLMatrixCUDA.hpp  SELLRMatrix.hpp  Specific.hpp  VecTransformation.hpp  helper_functions.cuh  helper_functions.hpp  logging.hpp
ANNarchy/inputs/: CurrentInjection.py  DecodingProjection.py  InputArray.py  PoissonPopulation.py  SpikeSourceArray.py  SpikeTrains.py  TimedArray.py  TimedPoissonPopulation.py  __init__.py
ANNarchy/intern/: ConfigManagement.py  ConfigManager.py  GlobalObjects.py  Messages.py  NetworkManager.py  Profiler.py  SpecificPopulation.py  SpecificProjection.py
ANNarchy/models/: Neurons.py  Synapses.py  __init__.py
ANNarchy/parser/: AnalyseNeuron.py  AnalyseSynapse.py  Analyser.py  CoupledEquations.py  Equation.py  Extraction.py  Function.py  ITE.py  ParserTemplate.py  Report.py  SingleAnalysis.py  StringManipulation.py  Test.py  __init__.py
ANNarchy4/: __init__.py
ANNarchy4/core/: Connector.py  Dendrite.py  Descriptor.py  Functions.py  Global.py  IO.py  LearningRule.py  Master.py  Master2.py  Network.py  Neuron.py  Neuron2.py  Population.py  PopulationView.py  Projection.py  Random.py  Record.py  SpikeVariable.py  Synapse.py  Synapse2.py  Variable.py  __init__.py  cy_functions.pyx  gui.py
ANNarchy4/data/: compile.bat  compile.sh  compiled.sh  setup.py
ANNarchy4/editor/: ANNarchyEditor.py  ANNarchyEditor.ui  CodeTemplates.py  CodeView.py  GLNetwork.py  GLObjects.py  GLPlotWidget.py  GLWidget.py  ListView.py  NetWidget.py  Repository.py  StackWidget.py  VisWidget.py  __init__.py  mytabwidget.py  ui_ANNarchyEditor.py
ANNarchy4/extensions/: __init__ .py  __init__.py
ANNarchy4/generator/: Generator.py  MakeTemplates.py  MeanPopulation.py  Population.py  PopulationGenerator.py  PopulationTemplates.py  Projection.py  ProjectionGenerator.py  ProjectionTemplates.py  ProjectionTemplatesCUDA.py  ProjectionTemplatesOMP.py  SpikePopulation.py  Templates.py  __init__.py
ANNarchy4/newparser/: Analyser.py  Equation.py  Test.py
ANNarchy4/parser/: Analyser.py  Definitions.py  Equation.py  Function.py  Group.py  Nodes.py  Test.py  Tree.py  __init__.py
ANNarchy4/visualization/: __init__.py  visualization.py
benchmarks/brunel/: ANNarchy-Brunel-plastic.py  Brian-STDP.py
benchmarks/fini2015/: ANNarchy-Brunel-plastic.py  ANNarchy-STDP.py  Brian-Brunel-plastic.py  Brian-Brunel-static.py  Brian-COBA.py  Brian2-COBA.py  Nest-Brunel-plastic.py  generate_weights.py
docs/: API.rst  Example.rst  Introduction.rst  Makefile  Manual.rst  README  README.md  conf.py  index.rst
docs/API/: ANNarchy.rst  Convolution.rst  Dendrite.rst  Hybrid.rst  IO.rst  Logging.rst  Monitor.rst  Network.rst  Neuron.rst  Population.rst  Projections.rst  RandomDistribution.rst  SpecificNeuron.rst  SpecificPopulation.rst  SpecificProjection.rst  SpecificSynapse.rst  Synapse.rst  Utilities.rst  Weightsharing.rst
docs/_static/: my-styles.css  simple.css
docs/_templates/: layout.html
docs/example/: BarLearn.rst  BarLearning.ipynb  BarLearning.rst  BasalGanglia.ipynb  BayesianOptimization.ipynb  COBA.ipynb  GapJunctions.ipynb  HodgkinHuxley.ipynb  Hybrid.ipynb  Image.ipynb  Izhikevich.ipynb  Izhikevich.rst  MultipleNetworks.ipynb  NeuralField.ipynb  NeuralField.rst  Ramp.ipynb  STDP.rst  STP.ipynb  SimpleSTDP.ipynb  StructuralPlasticity.ipynb  VogelsAbbott.rst  Webcam.ipynb
docs/intro/: ExternalDoc.rst  Installation.rst  Rationale.rst  Version.rst
docs/manual/: AccessingVariables.rst  General.rst  (+27 more)
tests/: .coveragerc  APIstructure.md  README.txt  RUN_ALL_CPU.py  access_test.py  conftest.py  coverage_check.sh  run_all.py  test_CPU.py  test_CUDA.py  test_GPU.py  test_openMP.py  test_openmp.py  test_single_thread.py
tests_cpp/: CMakeLists.txt  README.txt  run_tests.sh  test_Matrix6x8_WithAllRows.cpp  test_Matrix6x8_WithEmptyRows.cpp  test_Matrix8x6_WithAllRows.cpp  test_Matrix8x6_WithEmptyRows.cpp  test_MatrixCommon.hpp  test_MatrixReinitialize.cpp  test_PartMatrix14x5_WithAllRows.cpp
tests_cpp/fixed_point/: test_fixed_t.cpp
tests_cpp/spmv_formats/: test_Matrix6x8_WithAllRows.cpp  test_MatrixCommon.hpp  test_PartMatrix5x8_WithAllRows.cpp
tests_python/: README.txt  conftest.py  run_tests.py
(+701 files in other folders)
