[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ANNarchy"
version = "5.0.1"
description = 'Artificial Neural Networks architect'
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv2+"}
keywords = ["neural simulator"]
authors = [
  { name = "Julien Vitay", email = "julien.vitay@gmail.com" },
  { name = "Helge Dinkelbach", email = "helge-uelo.dinkelbach@informatik.tu-chemnitz.de" },
  { name = "Oliver Maith", email = "oliver.maith@informatik.tu-chemnitz.de"},
  { name = "Fred Hamker", email = "fred.hamker@informatik.tu-chemnitz.de" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "setuptools>=65.0",
    "cython>=3.0",
    "numpy>=1.21",
    "sympy>1.11",
    "scipy>1.9",
    "matplotlib>=3.0",
    "tqdm",
    "h5py",
    "lxml",
    "nanobind>=2.7.0",
]

[project.urls]
Documentation = "https://annarchy.github.io"
Issues = "https://github.com/ANNarchy/ANNarchy/issues"
Source = "https://github.com/ANNarchy/ANNarchy"

[tool.setuptools.packages.find]
exclude = ["tests_*"]	# ignore unittest folders
